--- a/adminHome.html
+++ b/adminHome.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Dashboard</title>
+  <title>Company Name</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -36,9 +36,9 @@
   <header id="header" class="header fixed-top d-flex align-items-center">
 
     <div class="d-flex align-items-center justify-content-between">
-      <a class="logo d-flex align-items-center">
+      <a href="./index.html" class="logo d-flex align-items-center">
         <img src="./public/backend/assets/img/logo1.jpg" alt="">
-        <span class="d-none d-lg-block">Dashboard</span>
+        <span class="d-none d-lg-block">Company Name</span>
       </a>
       <i class="bi bi-list toggle-sidebar-btn"></i>
     </div>
@@ -83,7 +83,7 @@
             </li>
 
             <li>
-              <a class="dropdown-item d-flex align-items-center">
+              <a href="./index.html" class="dropdown-item d-flex align-items-center">
                 <i class="bi bi-box-arrow-right"></i>
                 <span>Sign Out</span>
               </a>
