--- a/purchases.html
+++ b/purchases.html
@@ -102,7 +102,7 @@
     <ul class="sidebar-nav" id="sidebar-nav">
 
       <li class="nav-item">
-        <a class="nav-link ">
+        <a class="nav-link collapsed">
           <i class="bi bi-grid"></i>
           <span>Dashboard</span>
         </a>
@@ -126,17 +126,17 @@
         </ul>
       </li>
       <li class="nav-item">
-        <a class="nav-link collapsed" data-bs-target="#Purchasing" data-bs-toggle="collapse" href="#">
+        <a class="nav-link " data-bs-target="#Purchasing" data-bs-toggle="collapse" href="#">
           <i class="bi bi-menu-button-wide"></i><span>Purchasing</span><i class="bi bi-chevron-down ms-auto"></i>
         </a>
-        <ul id="Purchasing" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+        <ul id="Purchasing" class="nav-content collapse show" data-bs-parent="#sidebar-nav">
           <li>
-            <a href="./purchases.html">
+            <a class="active">
               <i class="bi bi-circle"></i><span>Purchases</span>
             </a>
           </li>
           <li>
-            <a href="./suppliers.html">
+            <a>
               <i class="bi bi-circle"></i><span>Suppliers</span>
             </a>
           </li>
