--- a/createComboProduct2.html
+++ b/createComboProduct2.html
@@ -102,7 +102,7 @@
     <ul class="sidebar-nav" id="sidebar-nav">
 
       <li class="nav-item">
-        <a class="nav-link ">
+        <a class="nav-link collapsed">
           <i class="bi bi-grid"></i>
           <span>Dashboard</span>
         </a>
@@ -114,12 +114,12 @@
         </a>
         <ul id="Sales" class="nav-content collapse " data-bs-parent="#sidebar-nav">
           <li>
-            <a href="./orders.html">
+            <a>
               <i class="bi bi-circle"></i><span>Orders</span>
             </a>
           </li>
           <li>
-            <a href="./customers.html">
+            <a>
               <i class="bi bi-circle"></i><span>Customers</span>
             </a>
           </li>
@@ -131,59 +131,59 @@
         </a>
         <ul id="Purchasing" class="nav-content collapse " data-bs-parent="#sidebar-nav">
           <li>
-            <a href="./purchases.html">
+            <a>
               <i class="bi bi-circle"></i><span>Purchases</span>
             </a>
           </li>
           <li>
-            <a href="./suppliers.html">
+            <a>
               <i class="bi bi-circle"></i><span>Suppliers</span>
             </a>
           </li>
         </ul>
       </li>
       <li class="nav-item">
-        <a class="nav-link collapsed" data-bs-target="#Inventory" data-bs-toggle="collapse" href="#">
+        <a class="nav-link " data-bs-target="#Inventory" data-bs-toggle="collapse" href="#">
           <i class="bi bi-menu-button-wide"></i><span>Inventory</span><i class="bi bi-chevron-down ms-auto"></i>
         </a>
-        <ul id="Inventory" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+        <ul id="Inventory" class="nav-content collapse show" data-bs-parent="#sidebar-nav">
           <li>
-            <a href="./indexSingleProduct.html">
+            <a class="active">
               <i class="bi bi-circle"></i><span>Products</span>
             </a>
           </li>
           <li>
-            <a href="./indexBrand.html">
+            <a>
               <i class="bi bi-circle"></i><span>Brands</span>
             </a>
           </li>
           <li>
-            <a href="./indexUnit.html">
+            <a>
               <i class="bi bi-circle"></i><span>Units</span>
             </a>
           </li>
           <li>
-            <a href="./indexCategory.html">
+            <a>
               <i class="bi bi-circle"></i><span>Categories</span>
             </a>
           </li>
           <li>
-            <a href="./indexSubCategory.html">
+            <a>
               <i class="bi bi-circle"></i><span>Sub Categories</span>
             </a>
           </li>
           <li>
-            <a href="./indexSize.html">
+            <a>
               <i class="bi bi-circle"></i><span>Sizes</span>
             </a>
           </li>
           <li>
-            <a href="./indexColor.html">
+            <a>
               <i class="bi bi-circle"></i><span>Colors</span>
             </a>
           </li>
           <li>
-            <a href="./indexBusinessLocation.html">
+            <a>
               <i class="bi bi-circle"></i><span>Business Locations</span>
             </a>
           </li>
@@ -268,6 +268,114 @@
   <main id="main" class="main" style="min-height: 75vh;">
 
 
+
+      <!-- Create -->
+      <div class="modal fade" id="Create" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <div class="row">
+                <div class="col-12">
+                  <label for="">Name :</label>
+                  <input type="text" name="" id="" class="form-control mt-2 mb-3">
+                </div>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <a class="btn btn-success">Create</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <section class="section">
+        <div class="row">
+          <div class="col-12 text-end pb-3">
+            <a href="./indexSingleProduct.html" class="btn btn-outline-primary">Single</a>
+            <a href="./indexVariableProduct.html" class="btn btn-outline-primary">Variable</a>
+            <a href="./indexComboProduct.html" class="btn btn-primary">Combo</a>
+          </div>
+          <div class="col-lg-12">
+  
+            <div class="form-control p-3">
+              <div class="row">
+                <div class="col-12">
+                  <h3>Combo Product Form</h3>
+                  <hr>
+                </div>
+                <div class="col-12">
+                  <label for="">Combo Name :</label>
+                  <input type="text" name="" class="form-control mt-2 mb-3" value="">
+                </div>
+              </div>
+              <form action="" method="post">
+              <div class="row">
+                <div class="col-md-6">
+                  <label for="">Product :</label>
+                  <select name="" id="" class="form-select mt-2 mb-3">
+                    <option value="" hidden>Choose</option>
+                    <option value="">Product 1</option>
+                    <option value="">Product 2</option>
+                    <option value="">Product 3</option>
+                  </select>
+                </div>
+                <div class="col-md-6">
+                    <label for="">Quantity :</label>
+                    <input type="text" name="" class="form-control mt-2 mb-3" value="">
+                </div>
+                <div class="col-12 text-center pb-3">
+                    <a class="btn btn-primary">Add New</a>
+                </div>
+              </div>
+              </form>
+              <div class="table-responsive">
+                <table class="table table-responsive">
+                  <thead>
+                    <tr>
+                      <th scope="col">#</th>
+                      <th scope="col">Product Name</th>
+                      <th scope="col" class="text-end">Sale Price</th>
+                      <th scope="col" class="text-end">Quantity</th>
+                      <th scope="col" class="text-end">Total</th>
+                      <th scope="col" class="text-center">Action</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <th scope="row">1</th>
+                      <td>Mark sdcfsdf</td>
+                      <td class="text-end">300</td>
+                      <td class="text-end">3</td>
+                      <td class="text-end">900</td>
+                      <td>
+                        <a href=""></a>
+                      </td>
+                    </tr>
+                    <tr style="border-top: 2px solid gray;">
+                      <td colspan="4" class="text-end">Total :</td>
+                      <td class="text-end">900</td>
+                      <td ></td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+              <form action="" method="post">
+              <div class="row">
+                <div class="col-12 text-center pb-3">
+                    <a href="./indexComboProduct.html" class="btn btn-success px-5">Create</a>
+                </div>
+              </div>
+              </form>
+            </div>
+  
+          </div>
+        </div>
+      </section>
+  
   </main>
 
   <!-- <footer id="footer" class="footer">
