--- a/indexBrand.html
+++ b/indexBrand.html
@@ -102,7 +102,7 @@
     <ul class="sidebar-nav" id="sidebar-nav">
 
       <li class="nav-item">
-        <a class="nav-link ">
+        <a class="nav-link collapsed">
           <i class="bi bi-grid"></i>
           <span>Dashboard</span>
         </a>
@@ -114,12 +114,12 @@
         </a>
         <ul id="Sales" class="nav-content collapse " data-bs-parent="#sidebar-nav">
           <li>
-            <a href="./orders.html">
+            <a>
               <i class="bi bi-circle"></i><span>Orders</span>
             </a>
           </li>
           <li>
-            <a href="./customers.html">
+            <a>
               <i class="bi bi-circle"></i><span>Customers</span>
             </a>
           </li>
@@ -131,59 +131,59 @@
         </a>
         <ul id="Purchasing" class="nav-content collapse " data-bs-parent="#sidebar-nav">
           <li>
-            <a href="./purchases.html">
+            <a>
               <i class="bi bi-circle"></i><span>Purchases</span>
             </a>
           </li>
           <li>
-            <a href="./suppliers.html">
+            <a>
               <i class="bi bi-circle"></i><span>Suppliers</span>
             </a>
           </li>
         </ul>
       </li>
       <li class="nav-item">
-        <a class="nav-link collapsed" data-bs-target="#Inventory" data-bs-toggle="collapse" href="#">
+        <a class="nav-link " data-bs-target="#Inventory" data-bs-toggle="collapse" href="#">
           <i class="bi bi-menu-button-wide"></i><span>Inventory</span><i class="bi bi-chevron-down ms-auto"></i>
         </a>
-        <ul id="Inventory" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+        <ul id="Inventory" class="nav-content collapse show" data-bs-parent="#sidebar-nav">
           <li>
-            <a href="./indexSingleProduct.html">
+            <a>
               <i class="bi bi-circle"></i><span>Products</span>
             </a>
           </li>
           <li>
-            <a href="./indexBrand.html">
+            <a class="active">
               <i class="bi bi-circle"></i><span>Brands</span>
             </a>
           </li>
           <li>
-            <a href="./indexUnit.html">
+            <a>
               <i class="bi bi-circle"></i><span>Units</span>
             </a>
           </li>
           <li>
-            <a href="./indexCategory.html">
+            <a>
               <i class="bi bi-circle"></i><span>Categories</span>
             </a>
           </li>
           <li>
-            <a href="./indexSubCategory.html">
+            <a>
               <i class="bi bi-circle"></i><span>Sub Categories</span>
             </a>
           </li>
           <li>
-            <a href="./indexSize.html">
+            <a>
               <i class="bi bi-circle"></i><span>Sizes</span>
             </a>
           </li>
           <li>
-            <a href="./indexColor.html">
+            <a>
               <i class="bi bi-circle"></i><span>Colors</span>
             </a>
           </li>
           <li>
-            <a href="./indexBusinessLocation.html">
+            <a>
               <i class="bi bi-circle"></i><span>Business Locations</span>
             </a>
           </li>
@@ -267,7 +267,116 @@
 
   <main id="main" class="main" style="min-height: 75vh;">
 
+        <!-- Create -->
+        <div class="modal fade" id="Create" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form action="" method="post">
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-12">
+                            <label for="">Name :</label>
+                            <input type="text" name="" class="form-control mt-2 mb-3">
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <a class="btn btn-success">Create</a>
+                </div>
+                </form>
+                </div>
+            </div>
+        </div>
 
+      <section class="section">
+        <div class="row">
+          <div class="col-lg-12">
+  
+            <div class="card">
+              <div class="card-body">
+                <div class="row align-items-center">
+                  <div class="col">
+                    <h5 class="card-title">Brands</h5>
+                  </div>
+                  <div class="col text-end">
+                    <a href="" data-bs-toggle="modal" data-bs-target="#Create" class="btn btn-success float-end">Create</a>
+                  </div>
+                </div>
+                
+                <div class="table-responsive">
+                <table class="table datatable table-responsive">
+                  <thead>
+                    <tr>
+                      <th scope="col">#</th>
+                      <th scope="col">Name</th>
+                      <th scope="col" class="text-center">Action</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>1</td>
+                      <td>Easy</td>
+                      <td class="text-center">
+                        <a href="" data-bs-toggle="modal" data-bs-target="#Edit" class="btn btn-success px-1 py-0"><i class="bi bi-pencil-fill"></i></a>
+                        <a href="" data-bs-toggle="modal" data-bs-target="#Delete" class="btn btn-danger px-1 py-0"><i class="bi bi-trash3-fill"></i></a>
+                      </td>
+                    </tr>
+                    <!-- Edit -->
+                    <div class="modal fade" id="Edit" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered">
+                            <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <form action="" method="post">
+                            <div class="modal-body">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <label for="">Name :</label>
+                                        <input type="text" name="" class="form-control mt-2 mb-3">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <a class="btn btn-success">Update</a>
+                            </div>
+                            </form>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Delete -->
+                    <div class="modal fade" id="Delete" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                      <div class="modal-dialog modal-dialog-centered">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                          </div>
+                          <div class="modal-body">
+                            <h3 class="text-center text-danger">Are you sure ?</h3>
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <a class="btn btn-danger">Delete</a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </tbody>
+                </table>
+                </div>
+  
+              </div>
+            </div>
+  
+          </div>
+        </div>
+      </section>
+  
   </main>
 
   <!-- <footer id="footer" class="footer">
