Sidebar active done

--- a/adminHome.html
+++ b/adminHome.html
@@ -102,7 +102,7 @@
     <ul class="sidebar-nav" id="sidebar-nav">
 
       <li class="nav-item">
-        <a class="nav-link ">
+        <a href="./adminHome.html" class="nav-link ">
           <i class="bi bi-grid"></i>
           <span>Dashboard</span>
         </a>
@@ -255,7 +255,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link collapsed">
+        <a href="./index.html" class="nav-link collapsed">
           <i class="bi bi-person"></i>
           <span>Logout</span>
         </a>
