--- a/purchases.html
+++ b/purchases.html
@@ -102,7 +102,7 @@
     <ul class="sidebar-nav" id="sidebar-nav">
 
       <li class="nav-item">
-        <a class="nav-link collapsed">
+        <a href="./adminHome.html" class="nav-link collapsed">
           <i class="bi bi-grid"></i>
           <span>Dashboard</span>
         </a>
@@ -131,12 +131,12 @@
         </a>
         <ul id="Purchasing" class="nav-content collapse show" data-bs-parent="#sidebar-nav">
           <li>
-            <a class="active">
+            <a class="active" href="./purchases.html">
               <i class="bi bi-circle"></i><span>Purchases</span>
             </a>
           </li>
           <li>
-            <a>
+            <a href="./suppliers.html">
               <i class="bi bi-circle"></i><span>Suppliers</span>
             </a>
           </li>
@@ -255,7 +255,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link collapsed">
+        <a href="./index.html" class="nav-link collapsed">
           <i class="bi bi-person"></i>
           <span>Logout</span>
         </a>
