--- a/indexColor.html
+++ b/indexColor.html
@@ -102,7 +102,7 @@
     <ul class="sidebar-nav" id="sidebar-nav">
 
       <li class="nav-item">
-        <a class="nav-link collapsed">
+        <a href="./adminHome.html" class="nav-link collapsed">
           <i class="bi bi-grid"></i>
           <span>Dashboard</span>
         </a>
@@ -114,12 +114,12 @@
         </a>
         <ul id="Sales" class="nav-content collapse " data-bs-parent="#sidebar-nav">
           <li>
-            <a>
+            <a href="./orders.html">
               <i class="bi bi-circle"></i><span>Orders</span>
             </a>
           </li>
           <li>
-            <a>
+            <a href="./customers.html">
               <i class="bi bi-circle"></i><span>Customers</span>
             </a>
           </li>
@@ -131,12 +131,12 @@
         </a>
         <ul id="Purchasing" class="nav-content collapse " data-bs-parent="#sidebar-nav">
           <li>
-            <a>
+            <a href="./purchases.html">
               <i class="bi bi-circle"></i><span>Purchases</span>
             </a>
           </li>
           <li>
-            <a>
+            <a href="./suppliers.html">
               <i class="bi bi-circle"></i><span>Suppliers</span>
             </a>
           </li>
@@ -148,42 +148,42 @@
         </a>
         <ul id="Inventory" class="nav-content collapse show" data-bs-parent="#sidebar-nav">
           <li>
-            <a>
+            <a href="./indexSingleProduct.html">
               <i class="bi bi-circle"></i><span>Products</span>
             </a>
           </li>
           <li>
-            <a>
+            <a href="./indexBrand.html">
               <i class="bi bi-circle"></i><span>Brands</span>
             </a>
           </li>
           <li>
-            <a>
+            <a href="./indexUnit.html">
               <i class="bi bi-circle"></i><span>Units</span>
             </a>
           </li>
           <li>
-            <a>
+            <a href="./indexCategory.html">
               <i class="bi bi-circle"></i><span>Categories</span>
             </a>
           </li>
           <li>
-            <a>
+            <a href="./indexSubCategory.html">
               <i class="bi bi-circle"></i><span>Sub Categories</span>
             </a>
           </li>
           <li>
-            <a>
+            <a href="./indexSize.html">
               <i class="bi bi-circle"></i><span>Sizes</span>
             </a>
           </li>
           <li>
-            <a class="active">
+            <a class="active" href="./indexColor.html">
               <i class="bi bi-circle"></i><span>Colors</span>
             </a>
           </li>
           <li>
-            <a>
+            <a href="./indexBusinessLocation.html">
               <i class="bi bi-circle"></i><span>Business Locations</span>
             </a>
           </li>
@@ -255,7 +255,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link collapsed">
+        <a href="./index.html" class="nav-link collapsed">
           <i class="bi bi-person"></i>
           <span>Logout</span>
         </a>
