sidebar image & slider image add

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
       <div class="container-fluid">
         <div class="row">
           <!-- SIDEBAR -->
-          <div class="col-lg-3 col-md-hide pb-5" style="height: 100vh;position: fixed;left: 0;overflow-y: scroll;">
+          <div class="col-lg-3 col-md-hide pb-5" style="height: 100vh;position: fixed;left: 0;overflow-y:scroll;">
 
             <!-- USE FOR MOBILE -->
             <div class="accordion py-3" id="accordionPanelsStayOpenExample">
@@ -233,15 +233,15 @@
               <!-- MENUES -->
               <div class="accordion-item">
                 <h2 class="accordion-header">
-                  <button class="accordion-button " type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-                    <i class="bi bi-house-fill pe-2"></i>
-                    Category 1
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#Category1" aria-expanded="true" aria-controls="Category1">
+                    <img src="./public/frontend/images/categories/home.webp" alt="" style="width: 50px;height: 50px;" class="rounded-circle me-2">
+                    Home & Living
                   </button>
                 </h2>
-                <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
+                <div id="Category1" class="accordion-collapse collapse ">
                   <div class="accordion-body py-1 ps-4">
 
-                    <a href="" class="nav-link active py-2">
+                    <a href="" class="nav-link py-2 ">
                       <i class="bi bi-check2-circle px-2"></i>
                       Sub Category 1 1
                     </a>
@@ -259,13 +259,12 @@
               </div>
               <div class="accordion-item">
                 <h2 class="accordion-header">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-                    <i class="bi bi-apple pe-2"></i>
-                    <!-- <i class="bi bi-android2 pe-2"></i> -->
-                    Category 2
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#Category2" aria-expanded="false" aria-controls="Category2">
+                    <img src="./public/frontend/images/categories/mother child.jpg" alt="" style="width: 50px;height: 50px;" class="rounded-circle me-2">
+                    Mother & Baby
                   </button>
                 </h2>
-                <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
+                <div id="Category2" class="accordion-collapse collapse">
                   <div class="accordion-body py-1 ps-4">
 
                     <a href="" class="nav-link py-2">
@@ -287,8 +286,8 @@
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#Category3" aria-expanded="false" aria-controls="Category3">
-                    <i class="bi bi-earbuds pe-2"></i>
-                    Category 3
+                    <img src="./public/frontend/images/categories/man.jpg" alt="" style="width: 50px;height: 50px;" class="rounded-circle me-2">
+                    Men's Fashion
                   </button>
                 </h2>
                 <div id="Category3" class="accordion-collapse collapse">
@@ -313,8 +312,8 @@
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#Category4" aria-expanded="false" aria-controls="Category4">
-                    <i class="bi bi-lamp-fill pe-2"></i>
-                    Category 4
+                    <img src="./public/frontend/images/categories/women.jfif" alt="" style="width: 50px;height: 50px;" class="rounded-circle me-2">
+                    Women's Fashion
                   </button>
                 </h2>
                 <div id="Category4" class="accordion-collapse collapse">
@@ -339,8 +338,8 @@
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#Category5" aria-expanded="false" aria-controls="Category5">
-                    <i class="bi bi-emoji-sunglasses-fill pe-2"></i>
-                    Category 5
+                    <img src="./public/frontend/images/categories/beauty.png" alt="" style="width: 50px;height: 50px;" class="rounded-circle me-2">
+                    Health & Beauty
                   </button>
                 </h2>
                 <div id="Category5" class="accordion-collapse collapse">
@@ -362,7 +361,163 @@
                   </div>
                 </div>
               </div>
-              
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#Category6" aria-expanded="false" aria-controls="Category6">
+                    <img src="./public/frontend/images/categories/fish meat.jpg" alt="" style="width: 50px;height: 50px;" class="rounded-circle me-2">
+                    Meat & Fish
+                  </button>
+                </h2>
+                <div id="Category6" class="accordion-collapse collapse">
+                  <div class="accordion-body py-1 ps-4">
+
+                    <a href="" class="nav-link py-2">
+                      <i class="bi bi-check2-circle px-2"></i>
+                      Sub Category 5 1
+                    </a>
+                    <a href="" class="nav-link py-2">
+                      <i class="bi bi-check2-circle px-2"></i>
+                      Sub Category 5 2
+                    </a>
+                    <a href="" class="nav-link py-2">
+                      <i class="bi bi-check2-circle px-2"></i>
+                      Sub Category 5 3
+                    </a>
+
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#Category7" aria-expanded="false" aria-controls="Category7">
+                    <img src="./public/frontend/images/categories/groceries.jpg" alt="" style="width: 50px;height: 50px;" class="rounded-circle me-2">
+                    Groceries
+                  </button>
+                </h2>
+                <div id="Category7" class="accordion-collapse collapse">
+                  <div class="accordion-body py-1 ps-4">
+
+                    <a href="" class="nav-link py-2">
+                      <i class="bi bi-check2-circle px-2"></i>
+                      Sub Category 5 1
+                    </a>
+                    <a href="" class="nav-link py-2">
+                      <i class="bi bi-check2-circle px-2"></i>
+                      Sub Category 5 2
+                    </a>
+                    <a href="" class="nav-link py-2">
+                      <i class="bi bi-check2-circle px-2"></i>
+                      Sub Category 5 3
+                    </a>
+
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#Category8" aria-expanded="false" aria-controls="Category8">
+                    <i class="bi bi-emoji-sunglasses-fill pe-2"></i>
+                    Fruits & Vegetables
+                  </button>
+                </h2>
+                <div id="Category8" class="accordion-collapse collapse">
+                  <div class="accordion-body py-1 ps-4">
+
+                    <a href="" class="nav-link py-2">
+                      <i class="bi bi-check2-circle px-2"></i>
+                      Sub Category 5 1
+                    </a>
+                    <a href="" class="nav-link py-2">
+                      <i class="bi bi-check2-circle px-2"></i>
+                      Sub Category 5 2
+                    </a>
+                    <a href="" class="nav-link py-2">
+                      <i class="bi bi-check2-circle px-2"></i>
+                      Sub Category 5 3
+                    </a>
+
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#Category9" aria-expanded="false" aria-controls="Category9">
+                    <img src="./public/frontend/images/categories/gadets.webp" alt="" style="width: 50px;height: 50px;" class="rounded-circle me-2">
+                    Gadgets
+                  </button>
+                </h2>
+                <div id="Category9" class="accordion-collapse collapse">
+                  <div class="accordion-body py-1 ps-4">
+
+                    <a href="" class="nav-link py-2">
+                      <i class="bi bi-check2-circle px-2"></i>
+                      Sub Category 5 1
+                    </a>
+                    <a href="" class="nav-link py-2">
+                      <i class="bi bi-check2-circle px-2"></i>
+                      Sub Category 5 2
+                    </a>
+                    <a href="" class="nav-link py-2">
+                      <i class="bi bi-check2-circle px-2"></i>
+                      Sub Category 5 3
+                    </a>
+
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#Category10" aria-expanded="false" aria-controls="Category10">
+                    <img src="./public/frontend/images/categories/elect.jpg" alt="" style="width: 50px;height: 50px;" class="rounded-circle me-2">
+                    Electronics Devices
+                  </button>
+                </h2>
+                <div id="Category10" class="accordion-collapse collapse">
+                  <div class="accordion-body py-1 ps-4">
+
+                    <a href="" class="nav-link py-2">
+                      <i class="bi bi-check2-circle px-2"></i>
+                      Sub Category 5 1
+                    </a>
+                    <a href="" class="nav-link py-2">
+                      <i class="bi bi-check2-circle px-2"></i>
+                      Sub Category 5 2
+                    </a>
+                    <a href="" class="nav-link py-2">
+                      <i class="bi bi-check2-circle px-2"></i>
+                      Sub Category 5 3
+                    </a>
+
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#Category11" aria-expanded="false" aria-controls="Category11">
+                    <img src="./public/frontend/images/categories/sports.jpg" alt="" style="width: 50px;height: 50px;" class="rounded-circle me-2">
+                    Sports & Outdoors
+                  </button>
+                </h2>
+                <div id="Category11" class="accordion-collapse collapse">
+                  <div class="accordion-body py-1 ps-4">
+
+                    <a href="" class="nav-link py-2">
+                      <i class="bi bi-check2-circle px-2"></i>
+                      Sub Category 5 1
+                    </a>
+                    <a href="" class="nav-link py-2">
+                      <i class="bi bi-check2-circle px-2"></i>
+                      Sub Category 5 2
+                    </a>
+                    <a href="" class="nav-link py-2">
+                      <i class="bi bi-check2-circle px-2"></i>
+                      Sub Category 5 3
+                    </a>
+
+                  </div>
+                </div>
+              </div>
+
             </div>
 
           </div>
@@ -373,20 +528,46 @@
               <div class="col-12">
                 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                   <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" aria-label="Slide 1" class="active" aria-current="true"></button>
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 7"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7" aria-label="Slide 8"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8" aria-label="Slide 9"></button>
                   </div>
                   <div class="carousel-inner py-3">
+
                     <div class="carousel-item active" style="height: 60vh;">
-                      <img src="./public/frontend/images/banners/banner1.jpg" class="w-100 h-100 rounded" alt="...">
+                      <img src="./public/frontend/images/banners/1.jpg" class="w-100 h-100 rounded" alt="...">
                     </div>
                     <div class="carousel-item" style="height: 60vh;">
-                      <img src="./public/frontend/images/banners/banner2.jpg" class="w-100 h-100 rounded" alt="...">
+                      <img src="./public/frontend/images/banners/2.jpg" class="w-100 h-100 rounded" alt="...">
                     </div>
                     <div class="carousel-item" style="height: 60vh;">
-                      <img src="./public/frontend/images/banners/banner3.jpg" class="w-100 h-100 rounded" alt="...">
+                      <img src="./public/frontend/images/banners/3.jpg" class="w-100 h-100 rounded" alt="...">
                     </div>
+                    <div class="carousel-item" style="height: 60vh;">
+                      <img src="./public/frontend/images/banners/4.jpg" class="w-100 h-100 rounded" alt="...">
+                    </div>
+                    <div class="carousel-item" style="height: 60vh;">
+                      <img src="./public/frontend/images/banners/5.jpg" class="w-100 h-100 rounded" alt="...">
+                    </div>
+                    <div class="carousel-item" style="height: 60vh;">
+                      <img src="./public/frontend/images/banners/6.jpg" class="w-100 h-100 rounded" alt="...">
+                    </div>
+                    <div class="carousel-item" style="height: 60vh;">
+                      <img src="./public/frontend/images/banners/7.jpg" class="w-100 h-100 rounded" alt="...">
+                    </div>
+                    <div class="carousel-item" style="height: 60vh;">
+                      <img src="./public/frontend/images/banners/8.jpg" class="w-100 h-100 rounded" alt="...">
+                    </div>
+                    <div class="carousel-item" style="height: 60vh;">
+                      <img src="./public/frontend/images/banners/9.jpg" class="w-100 h-100 rounded" alt="...">
+                    </div>
+
                   </div>
   
                   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
