--- a/createSingleProduct.html
+++ b/createSingleProduct.html
@@ -396,18 +396,12 @@
                   </select>
                 </div>
                 <div class="col-md-4">
-                  <label for="">
-                    Business Location : &nbsp;&nbsp;&nbsp;
-                    <a href="" data-bs-toggle="modal" data-bs-target="#Create" class="btn btn-outline-dark py-0 px-1 rounded-circle">
-                      <i class="bi bi-plus"></i>
-                    </a>
-                  </label>
-                  <select name="" id="" class="form-select mt-2 mb-3">
-                    <option value="" hidden>Choose</option>
-                    <option value="">One</option>
-                    <option value="">Two</option>
-                    <option value="">Three</option>
-                  </select>
+                  <label for="">Warranty :</label>
+                  <input type="text" name="" class="form-control mt-2 mb-3" value="">
+                </div>
+                <div class="col-md-4">
+                  <label for="">Expired Date :</label>
+                  <input type="text" name="" class="form-control mt-2 mb-3" value="">
                 </div>
                 <div class="col-12">
                   <label for="">Short Description :</label>
