--- a/indexSingleProduct.html
+++ b/indexSingleProduct.html
@@ -318,6 +318,7 @@
                       <td>Khulna</td>
                       <td class="text-end" style="text-align: end !important;">22</td>
                       <td class="text-center">
+                        <a href="" data-bs-toggle="modal" data-bs-target="#Show" class="btn btn-primary px-1 py-0">Variable Change</a> <br>
                         <a href="" data-bs-toggle="modal" data-bs-target="#Show" class="btn btn-primary px-1 py-0"><i class="bi bi-eye-fill"></i></a> <br>
                         <a href="" data-bs-toggle="modal" data-bs-target="#Edit" class="btn btn-success px-1 py-0"><i class="bi bi-pencil-fill"></i></a> <br>
                         <a href="" data-bs-toggle="modal" data-bs-target="#Delete" class="btn btn-danger px-1 py-0"><i class="bi bi-trash3-fill"></i></a>
