--- a/purchases.html
+++ b/purchases.html
@@ -267,6 +267,103 @@
 
   <main id="main" class="main" style="min-height: 75vh;">
 
+    <section class="section">
+      <div class="row">
+        <div class="col-lg-12">
+
+          <div class="card">
+            <div class="card-body">
+              <div class="row align-items-center">
+                <div class="col">
+                  <h5 class="card-title">Single Products</h5>
+                </div>
+                <div class="col text-end">
+                  <a href="./createPurchase.html" class="btn btn-success float-end">Create</a>
+                </div>
+              </div>
+              
+              <div class="table-responsive">
+              <table class="table datatable table-responsive">
+                <thead>
+                  <tr>
+                    <th scope="col">Invoice_ID</th>
+                    <th scope="col">Supplier</th>
+                    <th scope="col">Product_Names</th>
+                    <th scope="col">Quantities</th>
+                    <th scope="col">Amounts</th>
+                    <th scope="col">Dues</th>
+                    <th scope="col"></th>
+                    <th scope="col"></th>
+                    <th scope="col" class="text-center">Action</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>PY337</td>
+                    <td>Mini Table Regular - black</td>
+                    <td>
+                      <div class="p-1 form-control" style="width: 50px;height: 50px;">
+                        <img style="width: 100%;height: 100%;background: gray;border-radius: 10px;">
+                      </div>
+                      <a href="">more</a>
+                    </td>
+                    <td>123456</td>
+                    <td>230</td>
+                    <td>400</td>
+                    <td>Khulna</td>
+                    <td class="text-end" style="text-align: end !important;">22</td>
+                    <td class="text-center">
+                      <a href="" data-bs-toggle="modal" data-bs-target="#Show" class="btn btn-primary px-1 py-0">Add Quantity</a> <br>
+                      <a href="" data-bs-toggle="modal" data-bs-target="#Show" class="btn btn-primary px-1 py-0 mb-1"><i class="bi bi-eye-fill"></i></a> <br>
+                      <a href="" data-bs-toggle="modal" data-bs-target="#Edit" class="btn btn-success px-1 py-0 mb-1"><i class="bi bi-pencil-fill"></i></a> <br>
+                      <a href="" data-bs-toggle="modal" data-bs-target="#Delete" class="btn btn-danger px-1 py-0 mb-1"><i class="bi bi-trash3-fill"></i></a>
+                    </td>
+                  </tr>
+                  <!-- Show -->
+                  <div class="modal fade" id="Show" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-xl">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h4>Product Name : Mini Table Regular - black</h4>
+                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                          
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                          <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- Delete -->
+                  <div class="modal fade" id="Delete" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                          <h3 class="text-center text-danger">Are you sure ?</h3>
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                          <a class="btn btn-danger">Delete</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </tbody>
+              </table>
+              </div>
+
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
 
   </main>
 
